# snapshot.nvim

./: .gitignore  BUGFIXES.md  CHANGELOG.md  EXAMPLES.md  INSTALL.md  LICENSE  Makefile  QUICKREF.md  README.md  example_config.lua  test.sh
.github/workflows/: lint-test.yml  release.yml
doc/: my-template-docs.txt  tags
generator/: Cargo.toml  test_debug.rs  test_default.rs  test_dirs  test_dirs.rs  test_expand  test_expand.rs  test_main_debug  test_tilde  test_tilde.rs
generator/src/: main.rs  shadow.rs  utils.rs
lua/: snapshot.lua
lua/snapshot/: highlights.lua  json.lua
plugin/: snapshot.lua
tests/snapshot/: snapshot_spec.lua
